<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.view.fragment.ManageWishFragment">

    <EditText
        android:id="@+id/edit_text_wish_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:hint="@string/label_wish_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextWishDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_wish_details"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerWishStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageWish"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_placeholder"
        android:contentDescription="@string/label_wish_photo"
        android:scaleType="centerCrop" />

    <ProgressBar
        android:id="@+id/loadingWishList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop" />

    <Button
        android:id="@+id/buttonSaveWish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_save" />

</LinearLayout>
